crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
____
[cols=",",options="header",]
|===
|a |b
|1 |2
|===
____
