crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-long-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|k |description
|a |this cell holds a deliberately long run of text that cannot fit
inside one seventy-two column line and therefore forces a layout
decision
|===
