crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.The full caption text
[cols="",options="header",]
|===
|h
|v
|===
