crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|h1 |h2
|a |b
|===
